--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,7 @@ name: Check for Cloudflared Releases and Build Docker Image
 on:
   schedule:
     - cron: '0 0 * * *' # This runs the workflow daily at midnight
+  workflow_dispatch: # Allows manual triggering
 
 jobs:
   check_and_build:
