--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Check for new cloudflared release
         id: check_release
         run: |
+          python - <<EOF
           import requests
 
           response = requests.get('https://api.github.com/repos/cloudflare/cloudflared/releases/latest')
@@ -37,6 +38,7 @@ jobs:
                   f.write(latest_version)
           else:
               print('No new version found.')
+          EOF
 
       - name: Set up Docker Buildx
         if: steps.check_release.outputs.new_version
