--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,10 @@ jobs:
               print('No new version found.')
           EOF
 
+      - name: Download Go tarball
+        run: |
+          curl -L -o go1.22-armv5.tar.gz https://github.com/SteerX/cloudflared-armv5/releases/download/init/go1.22-armv5.tar.gz
+
       - name: Set up Docker Buildx
         if: steps.check_release.outputs.new_version
         uses: docker/setup-buildx-action@v3
