--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,11 @@ jobs:
         run: |
           curl -L -o go1.22-armv5.tar.gz https://github.com/SteerX/cloudflared-armv5/releases/download/init/go1.22-armv5.tar.gz
 
+      # --- FIX: Enable QEMU for ARM emulation in Buildx ---
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      # ----------------------------------------------------
+
       - name: Set up Docker Buildx
         if: steps.check_release.outputs.new_version
         uses: docker/setup-buildx-action@v3
@@ -66,3 +71,4 @@ jobs:
             steerx/cloudflared-armv5:latest
           build-args: |
             CLOUDFLARED_VERSION=${{ steps.check_release.outputs.new_version }}
+          platforms: linux/arm/v5
