--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,8 @@ on:
   schedule:
     - cron: '0 0 * * *' # This runs the workflow daily at midnight
   workflow_dispatch: # Allows manual triggering
+    - cron: '0 0 * * *'
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -41,10 +43,6 @@ jobs:
               print('No new version found.')
           EOF
 
-      - name: Download Go tarball
-        run: |
-          curl -L -o go1.22-armv5.tar.gz https://github.com/SteerX/cloudflared-armv5/releases/download/init/go1.22-armv5.tar.gz
-
       # Enable QEMU for ARM emulation in Buildx
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -52,6 +50,17 @@ jobs:
       - name: Set up Docker Buildx
         if: steps.check_release.outputs.new_version
         uses: docker/setup-buildx-action@v3
+
+      - name: Install build tools for Go cross-compilation
+        if: steps.check_release.outputs.new_version
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gcc-arm-linux-gnueabi curl git tar
+
+      - name: Build Go ARMv5 toolchain (if needed)
+        if: steps.check_release.outputs.new_version
+        run: |
+          bash build-cloudflared-armv5.sh
 
       - name: Login to Docker Hub
         if: steps.check_release.outputs.new_version
