--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,22 +59,15 @@ jobs:
         run: |
           bash build-cloudflared-armv5.sh "${{ steps.check_release.outputs.new_version }}"
 
-      - name: Get Go toolchain tarball name
+      - name: Read Go toolchain info
         if: steps.check_release.outputs.new_version
-        id: go_tarball
+        id: go_meta
         run: |
-          CLOUDFLARED_REPO_URL="https://github.com/cloudflare/cloudflared.git"
-          CLOUDFLARED_TMP_DIR="cloudflared-upstream-tmp"
-          GO_MOD_VERSION_LINE=$(grep '^go ' "$CLOUDFLARED_TMP_DIR/go.mod" | awk '{print $2}')
-          if [[ "$GO_MOD_VERSION_LINE" =~ ^([0-9]+\.[0-9]+)$ ]]; then
-            GO_FULL_VERSION="${BASH_REMATCH[1]}.0"
-          elif [[ "$GO_MOD_VERSION_LINE" =~ ^([0-9]+\.[0-9]+\.[0-9]+)$ ]]; then
-            GO_FULL_VERSION="${BASH_REMATCH[1]}"
-          else
-            echo "Could not parse Go version from cloudflared upstream go.mod"
-            exit 1
-          fi
-          echo "go_toolchain_tarball=go${GO_FULL_VERSION}-armv5.tar.gz" >> $GITHUB_OUTPUT
+          source toolchain-meta.env
+          echo "go_toolchain_tarball=$GO_TARBALL" >> $GITHUB_OUTPUT
+          echo "go_full_version=$GO_FULL_VERSION" >> $GITHUB_OUTPUT
+
+      # Removed Get Go toolchain tarball name step (now handled in Bash + above step)
 
       - name: Login to Docker Hub
         if: steps.check_release.outputs.new_version
@@ -94,7 +87,7 @@ jobs:
             steerx/cloudflared-armv5:latest
           build-args: |
             CLOUDFLARED_VERSION=${{ steps.check_release.outputs.new_version }}
-            GO_TOOLCHAIN_TARBALL=${{ steps.go_tarball.outputs.go_toolchain_tarball }}
+            GO_TOOLCHAIN_TARBALL=${{ steps.go_meta.outputs.go_toolchain_tarball }}
           platforms: linux/arm/v5
 
       - name: Update latest_version.txt and push to repo
