--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -142,10 +142,9 @@ jobs:
           git archive --format=zip --output=cloudflared-armv5-${{ steps.check_release.outputs.new_version }}.zip HEAD
 
       - name: Upload source archive to release
-        if: steps.check_release.outputs.new_version
+        if: steps.check_release.outputs.new_version && steps.release_check.outputs.exists == 'true'
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ steps.check_release.outputs.new_version }}
           files: cloudflared-armv5-${{ steps.check_release.outputs.new_version }}.zip
           fail_on_unmatched_files: false
-          update_existing: true
